--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Legend -->
     <div id="legend" class="legend">
         <h2>Legend</h2>
-        <p> According to legend, the Kailasa Temple was built to honor the Hindu diety Lord Shiva. King Krishna I had fallen very ill to an incurable disease. Queen Manikavati vowed to erect a temple in honor of Lord Shiva and fast until the top of the temple, the sikhara, was built. Once the king was better, work on the temple started. To finish the top of the temple as fast as possible, the architect who took up the challenge, Kokasa, started the carving of the rock temple from the top so the queen could end her fast within a week.</p>
+        <p> According to legend, the Kailasa Temple was built to honor the Hindu diety, Lord Shiva. King Krishna I had fallen very ill to an incurable disease. To try to save him, Queen Manikavati vowed to erect a temple in honor of Lord Shiva and fast until the top of the temple, the sikhara, was built. Once the king was better, work on the temple started. To finish the top of the temple as fast as possible, the architect who took up the challenge, Kokasa, started the carving of the rock temple from the top so the queen could end her fast within a week.</p>
     </div>
 
     <!-- Footer -->
